--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "webpack-merge": "^4.2.1"
   },
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
+    "d3": "^5.9.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   }
